stylesheet/styles.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");



:root {
  --primary-accent: #fd9a63;
  --secondary-accent: #ecd8c4;
  --background-1: #1c1527;
  scroll-behavior: smooth;
}

* {
  padding: 0px;
  margin: 0px;
  box-sizing: border-box;
  font-family: "Montserrat", sans-serif;
}

body{
  background-color: var(--background-1);
}

::selection {
  background: var(--primary-accent);
  color: var(--background-1);
}

::-webkit-scrollbar{
	width: 12px;
  height: 12px;
}

::-webkit-scrollbar-track{
	border: 4px solid var(--background-1);
	background-color: #37294d;
  margin: 5px;
}

::-webkit-scrollbar-thumb{
	background-color: var(--primary-accent);
	border-radius: 12px;
}

@media only screen and (max-width: 680px){
  ::-webkit-scrollbar{
    width: 0;
  }
}

.flex-container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
}

.section-heading{
  width: 100%;
  text-align: center;
  padding: 1em;
  font-size: 3em;
  color: var(--secondary-accent);
}

.snap-item{
  scroll-snap-align: start;
}

.body-div{
  scroll-snap-type:y proximity;
  height: 100vh;
  overflow-y: auto;
  overflow-x: hidden;
  perspective: 10px;
  scroll-behavior: smooth;
}

/* *********************** navbar css ***************** */

nav {
  display: flex;
  position: absolute;
  width: 100%;
  top: 0;
  justify-content: space-between;
  align-items: center;
  padding: 2em 5%;
  z-index: 21;
}
nav a {
  text-decoration: none;
  color: var(--secondary-accent);
  border-radius: 50vh;
  font-weight: 500;
  transition: all 0.3s ease-out;
}

.links a:hover {
  color: black;
  background-color: var(--primary-accent);
}

nav .page-title {
  letter-spacing: 2px;
  font-weight: 700;
  font-size: 20px;
  pointer-events: none;
}
nav .links {
  list-style: none;
  display: flex;
}
nav .links a {
  padding: 0.5em 1em;
}

.hamburger {
  display: none;
}

.bar {
  display: block;
  width: 25px;
  height: 3px;
  margin: 5px auto;
  -webkit-transition: all 0.3s ease-in-out;
  transition: 0.3s ease-in-out;
  background-color: var(--secondary-accent);
}

@media only screen and (max-width: 680px) {
  .hamburger {
    display: block;
    cursor: pointer;
  }
  nav .links {
    position: fixed;
    top: 0px;
    right: -100%;
    height: 100vh;
    flex-direction: column;
    justify-content: space-around;
    background-color: #1c1527;
    width: 100%;
    padding: 20% 0;
    transition: 0.3s;
  }

  nav li a {
    display: inline-block;
    color: #fd9a63;
    text-align: center;
    width: 100%;
    font-size: 2em;
  }
  nav a:hover {
    color: #d6f0ff;
  }
  .links.active {
    right: 0px;
  }

  .hamburger.active {
    position: fixed;
    right: 0px;
    padding-right: 5%;
  }
  .hamburger.active .bar:nth-child(2) {
    opacity: 0;
  }

  .hamburger.active .bar:nth-child(1) {
    transform: translateY(8px) rotate(45deg);
  }

  .hamburger.active .bar:nth-child(3) {
    transform: translateY(-8px) rotate(-45deg);
  }
}

/* ********************** main homepage *********************** */

.image-holder {
  height: 100vh;
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  transform-style: preserve-3d;
  z-index: -1;
}

.background{
  transform: translateZ(-10px) scale(2);
}

.mountain{
  transform: translateZ(-5px) scale(1.5);
}
.foreground{
  transform: translateZ(-3px) scale(1.3);
}

.background, 
.foreground,
.mountain {
  position: absolute;
  /* top: 0; */
  width: 100%;
  height: 100%;
  object-fit: cover;
  z-index: -1;
}

.big-title {
  transform: translate(0, 40%);
  text-align: left;
  font-size: 3rem;
  font-weight: 600;
  text-shadow: 0 0 5px #9d4675;
  color: var(--secondary-accent);
}

span {
  color: #fc9c60;
  font-size: 1.5em;
}
.span1 {
  color: #ed4a8d !important ;
}

@media only screen and (max-width: 680px){
  .big-title{
    margin: 0 auto;
    font-size: 2em;
  }
}

/* ************************* About css *************************** */

.about {
  width: 100%;
  /* margin-top: -20px; */
  min-height: 100vh;
  background-color: #1c1527;
  display: flex;
  flex-wrap: wrap-reverse;
  justify-content: space-around;
  align-items: center;
}

.about h2 {
  color: var(--secondary-accent);
}

.about p {
  color: #c5844e;
}

.about .text {
  width: 40%;
  min-width: 300px;
  padding: 1em;
  font-size: 1.5em;
}
.about .image {
  display: flex;
  min-width: 300px;
  width: 40%;
  justify-content: center;
}

.image img {
  width: 80%;
  border-radius: 50%;
}

@media only screen and (max-width: 680px) {
  .about .text {
    font-size: 1.2em;
  }
  .about{
    gap: 1rem;
     max-height: 100vh;
  }
}

/* ****************** projects css **************** */
.projects {
  background-color: #1c1527;
  min-height: 70vh;
  padding-bottom: 4em;
}

.projects-container{
  flex-wrap: nowrap;
  overflow-x: scroll;
  width: 80%;
  gap: 2rem;
  padding: 2rem;
  justify-content: flex-start;
  overscroll-behavior-inline: contain ;
}

.snaps-inline{
  scroll-snap-type: inline mandatory;
  scroll-padding-inline: 1rem;
}

.snaps-inline > *{
  scroll-snap-align: start;
}


.project-card:nth-child(1){
  background-image:url("https://ik.imagekit.io/nmtrlmn4bwh/MyPortfolio/car_showcase.gif") ;
}
.project-card:nth-child(2){
  background-image:url("https://ik.imagekit.io/nmtrlmn4bwh/MyPortfolio/animeto_food_iHxRsfI6W0J.gif") ;
}
.project-card:nth-child(3){
  background-image:url("https://ik.imagekit.io/nmtrlmn4bwh/MyPortfolio/portfolio_2MqdUKjgE6f.gif") ;
}
.project-card:nth-child(4){
  background-image:url("https://ik.imagekit.io/nmtrlmn4bwh/MyPortfolio/designers_club_XrH_QKzI17i.gif") ;
}
.project-card:nth-child(5){
  background-image:url("https://ik.imagekit.io/nmtrlmn4bwh/MyPortfolio/Covid_wo4mhRwIwBH.gif") ;
}
/* ... */

